--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -1,6 +1,8 @@
 {
   "item.tutorialmod.pink_garnet": "Pink Garnet",
   "item.tutorialmod.raw_pink_garnet": "Raw Pink Garnet",
+  "item.tutorialmod.chisel": "Chisel",
+  "item.tutorialmod.stone_stick": "Stone Stick",
 
   "item.tutorialmod.pink_garnet_block": "Block of Pink Garnet",
   "item.tutorialmod.raw_pink_garnet_block": "Block of Raw Pink Garnet",
